lots of changes

--- a/lib/quizzaz_web/live/game_live/index.html.heex
+++ b/lib/quizzaz_web/live/game_live/index.html.heex
@@ -8,6 +8,7 @@
       title={@page_title}
       action={@live_action}
       game={@game}
+      user_id={@user_id}
       return_to={Routes.game_index_path(@socket, :index)}
     />
   </.modal>
