--- a/lib/quizzaz_web/live/host_live/index.html.heex
+++ b/lib/quizzaz_web/live/host_live/index.html.heex
@@ -1,9 +1,15 @@
 <div>
-	<h3>To join this game please enter the following code:</h3> 
-	<p><%= @session_id %></p>
+	<%= case @state do %>
+		<% :waiting_for_players -> %>
+			<h3>To join this game please enter the following code:</h3> 
+			<p><%= @session_id %></p>
 
-	<h3>Players:</h3>
-	<%= for player <- @game_session.players do %>
-		<p><%= player.name %></p>
+			<h3>Players:</h3>
+			<%= for player <- @game_session.players do %>
+				<p><%= player.name %></p>
+			<% end %>
+			<button phx-click="start-game">Start Game</button>
+		<% :playing -> %>
+			<h3>Playing Game</h3>
 	<% end %>
 </div>
