--- a/lib/quizzaz_web/live/game_live/index.html.heex
+++ b/lib/quizzaz_web/live/game_live/index.html.heex
@@ -28,13 +28,22 @@
         <td><%= game.name %></td>
 
         <td>
-          <span><%= live_redirect "Show", to: Routes.game_show_path(@socket, :show, game) %></span>
-          <span><%= live_patch "Edit", to: Routes.game_index_path(@socket, :edit, game) %></span>
-          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: game.id, data: [confirm: "Are you sure?"] %></span>
+          <span>
+            <%= live_redirect("Show", to: Routes.game_show_path(@socket, :show, game)) %>
+          </span>
+          <span><%= live_patch("Edit", to: Routes.game_index_path(@socket, :edit, game)) %></span>
+          <span>
+            <%= link("Delete",
+              to: "#",
+              phx_click: "delete",
+              phx_value_id: game.id,
+              data: [confirm: "Are you sure?"]
+            ) %>
+          </span>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<span><%= live_patch "New Game", to: Routes.game_index_path(@socket, :new) %></span>
+<span><%= live_patch("New Game", to: Routes.game_index_path(@socket, :new)) %></span>
