--- a/lib/quizzaz_web/templates/user_session/new.html.heex
+++ b/lib/quizzaz_web/templates/user_session/new.html.heex
@@ -7,21 +7,21 @@
     </div>
   <% end %>
 
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
+  <%= label(f, :email) %>
+  <%= email_input(f, :email, required: true) %>
 
-  <%= label f, :password %>
-  <%= password_input f, :password, required: true %>
+  <%= label(f, :password) %>
+  <%= password_input(f, :password, required: true) %>
 
-  <%= label f, :remember_me, "Keep me logged in for 60 days" %>
-  <%= checkbox f, :remember_me %>
+  <%= label(f, :remember_me, "Keep me logged in for 60 days") %>
+  <%= checkbox(f, :remember_me) %>
 
   <div>
-    <%= submit "Log in" %>
+    <%= submit("Log in") %>
   </div>
 </.form>
 
 <p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
+  <%= link("Register", to: Routes.user_registration_path(@conn, :new)) %> |
+  <%= link("Forgot your password?", to: Routes.user_reset_password_path(@conn, :new)) %>
 </p>
