added countdown to host

--- a/lib/quizzaz_web/live/game_live/show.html.heex
+++ b/lib/quizzaz_web/live/game_live/show.html.heex
@@ -40,4 +40,5 @@
 
 <span>
   <%= live_patch("Edit", to: Routes.game_show_path(@socket, :edit, @game), class: "button") %>
-</span> | <span><%= live_redirect("Back", to: Routes.game_index_path(@socket, :index)) %></span>
+</span>
+| <span><%= live_redirect("Back", to: Routes.game_index_path(@socket, :index)) %></span>
