--- a/lib/quizzaz_web/templates/layout/root.html.heex
+++ b/lib/quizzaz_web/templates/layout/root.html.heex
@@ -16,7 +16,7 @@
     </script>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <section class="container">
         <nav>
           <ul>
@@ -34,7 +34,9 @@
           />
         </a>
       </section>
-    </header>
-    <%= @inner_content %>
+    </header> -->
+    <div id="content">
+      <%= @inner_content %>
+    </div>
   </body>
 </html>
