--- a/lib/quizzaz_web/live/game_live/components/form_component.html.heex
+++ b/lib/quizzaz_web/live/game_live/components/form_component.html.heex
@@ -9,11 +9,11 @@
     phx-change="validate"
     phx-submit="save"
   >
-    <%= label(f, :name) %>
-    <%= text_input(f, :name) %>
+    <%= label(f, :name, class: "input-label") %>
+    <%= text_input(f, :name, class: "input") %>
     <%= error_tag(f, :name) %>
 
-    <%= label(f, :type) %>
+    <%= label(f, :type, class: "input-label") %>
     <%= select(f, :type, Quizzaz.Games.Game.game_types()) %>
     <%= error_tag(f, :type) %>
     <!--<div>
@@ -32,7 +32,7 @@
       prompt: "select question type"
     ) %>
     <div>
-      <%= submit("Add new question", phx_disable_with: "adding...") %>
+      <%= submit("Add new question", phx_disable_with: "adding...", class: "btn-blue") %>
     </div>
   </.form>
 
@@ -46,32 +46,32 @@
           phx-target={@myself}
           phx-submit="add_question"
         >
-          <%= label(f, :prompt) %>
-          <%= text_input(f, :prompt) %>
+          <%= label(f, :prompt, class: "input-label") %>
+          <%= text_input(f, :prompt, class: "input") %>
           <%= error_tag(f, :prompt) %>
 
-          <%= label(f, :choice_1) %>
-          <%= text_input(f, :choice_1) %>
+          <%= label(f, :choice_1, class: "input-label") %>
+          <%= text_input(f, :choice_1, class: "input") %>
           <%= error_tag(f, :choice_1) %>
 
-          <%= label(f, :choice_2) %>
-          <%= text_input(f, :choice_2) %>
+          <%= label(f, :choice_2, class: "input-label") %>
+          <%= text_input(f, :choice_2, class: "input") %>
           <%= error_tag(f, :choice_2) %>
 
-          <%= label(f, :choice_3) %>
-          <%= text_input(f, :choice_3) %>
+          <%= label(f, :choice_3, class: "input-label") %>
+          <%= text_input(f, :choice_3, class: "input") %>
           <%= error_tag(f, :choice_3) %>
 
-          <%= label(f, :choice_4) %>
-          <%= text_input(f, :choice_4) %>
+          <%= label(f, :choice_4, class: "input-label") %>
+          <%= text_input(f, :choice_4, class: "input") %>
           <%= error_tag(f, :choice_4) %>
 
-          <%= label(f, :answer) %>
+          <%= label(f, :answer, class: "input-label") %>
           <%= select(f, :answer, [1, 2, 3, 4], prompt: "select answer") %>
           <%= error_tag(f, :answer) %>
 
           <div>
-            <%= submit("Add question", phx_disable_with: "adding...") %>
+            <%= submit("Add question", phx_disable_with: "adding...", class: "btn-blue") %>
           </div>
         </.form>
       <% "scramble_letters" -> %>
@@ -82,12 +82,12 @@
           phx-target={@myself}
           phx-submit="add_question"
         >
-          <%= label(f, :answer) %>
-          <%= text_input(f, :answer) %>
+          <%= label(f, :answer, class: "input-label") %>
+          <%= text_input(f, :answer, class: "input") %>
           <%= error_tag(f, :answer) %>
 
           <div>
-            <%= submit("Add question", phx_disable_with: "adding...") %>
+            <%= submit("Add question", phx_disable_with: "adding...", class: "btn-blue") %>
           </div>
         </.form>
       <% "scramble_words" -> %>
@@ -98,12 +98,12 @@
           phx-target={@myself}
           phx-submit="add_question"
         >
-          <%= label(f, :answer_list) %>
-          <%= text_input(f, :answer_list) %>
+          <%= label(f, :answer_list, class: "input-label") %>
+          <%= text_input(f, :answer_list, class: "input") %>
           <%= error_tag(f, :answer_list) %>
 
           <div>
-            <%= submit("Add question", phx_disable_with: "adding...") %>
+            <%= submit("Add question", phx_disable_with: "adding...", class: "btn-blue") %>
           </div>
         </.form>
       <% "open_ended" -> %>
@@ -114,12 +114,12 @@
           phx-target={@myself}
           phx-submit="add_question"
         >
-          <%= label(f, :prompt) %>
-          <%= text_input(f, :prompt) %>
+          <%= label(f, :prompt, class: "input-label") %>
+          <%= text_input(f, :prompt, class: "input") %>
           <%= error_tag(f, :prompt) %>
 
           <div>
-            <%= submit("Add question", phx_disable_with: "adding...") %>
+            <%= submit("Add question", phx_disable_with: "adding...", class: "btn-blue") %>
           </div>
         </.form>
       <% _ -> %>
@@ -148,5 +148,5 @@
     <% end %>
   <% end %>
 
-  <button phx-click="save" phx-target={@myself}>Save Game</button>
+  <button class="btn-blue" phx-click="save" phx-target={@myself} class="btn-blue">Save Game</button>
 </div>
