--- a/lib/quizzaz_web/templates/user_confirmation/edit.html.heex
+++ b/lib/quizzaz_web/templates/user_confirmation/edit.html.heex
@@ -2,7 +2,7 @@
 
 <.form let={_f} for={:user} action={Routes.user_confirmation_path(@conn, :update, @token)}>
   <div>
-    <%= submit("Confirm my account") %>
+    <%= submit("Confirm my account", class: "btn-blue") %>
   </div>
 </.form>
 
