--- a/lib/quizzaz_web/templates/user_settings/edit.html.heex
+++ b/lib/quizzaz_web/templates/user_settings/edit.html.heex
@@ -16,11 +16,11 @@
 
   <%= hidden_input(f, :action, name: "action", value: "update_email") %>
 
-  <%= label(f, :email) %>
+  <%= label(f, :email, class: "input-label") %>
   <%= email_input(f, :email, required: true) %>
   <%= error_tag(f, :email) %>
 
-  <%= label(f, :current_password, for: "current_password_for_email") %>
+  <%= label(f, :current_password, for: "current_password_for_email", class: "input-label") %>
   <%= password_input(f, :current_password,
     required: true,
     name: "current_password",
@@ -29,7 +29,7 @@
   <%= error_tag(f, :current_password) %>
 
   <div>
-    <%= submit("Change email") %>
+    <%= submit("Change email", class: "btn-blue") %>
   </div>
 </.form>
 
@@ -49,15 +49,15 @@
 
   <%= hidden_input(f, :action, name: "action", value: "update_password") %>
 
-  <%= label(f, :password, "New password") %>
+  <%= label(f, :password, "New password", class: "input-label") %>
   <%= password_input(f, :password, required: true) %>
   <%= error_tag(f, :password) %>
 
-  <%= label(f, :password_confirmation, "Confirm new password") %>
+  <%= label(f, :password_confirmation, "Confirm new password", class: "input-label") %>
   <%= password_input(f, :password_confirmation, required: true) %>
   <%= error_tag(f, :password_confirmation) %>
 
-  <%= label(f, :current_password, for: "current_password_for_password") %>
+  <%= label(f, :current_password, for: "current_password_for_password", class: "input-label") %>
   <%= password_input(f, :current_password,
     required: true,
     name: "current_password",
@@ -66,6 +66,6 @@
   <%= error_tag(f, :current_password) %>
 
   <div>
-    <%= submit("Change password") %>
+    <%= submit("Change password", class: "btn-blue") %>
   </div>
 </.form>
