--- a/lib/quizzaz_web/live/game_live/index.html.heex
+++ b/lib/quizzaz_web/live/game_live/index.html.heex
@@ -31,7 +31,7 @@
           <span>
             <%= live_redirect("Show", to: Routes.game_show_path(@socket, :show, game)) %>
           </span>
-          <span><%= live_patch("Edit", to: Routes.game_index_path(@socket, :edit, game)) %></span>
+          <span><%= live_patch("Edit", to: Routes.game_edit_path(@socket, :edit, game)) %></span>
           <span>
             <%= link("Delete",
               to: "#",
@@ -46,4 +46,4 @@
   </tbody>
 </table>
 
-<span><%= live_patch("New Game", to: Routes.game_index_path(@socket, :new)) %></span>
+<span><%= live_patch("New Game", to: Routes.game_new_path(@socket, :new)) %></span>
