--- a/lib/quizzaz_web/live/game_live/show.html.heex
+++ b/lib/quizzaz_web/live/game_live/show.html.heex
@@ -1,18 +1,5 @@
 <h1>Show Game</h1>
 
-<%= if @live_action in [:edit] do %>
-  <.modal return_to={Routes.game_show_path(@socket, :show, @game)}>
-    <.live_component
-      module={QuizzazWeb.GameLive.FormComponent}
-      id={@game.id}
-      title={@page_title}
-      action={@live_action}
-      game={@game}
-      return_to={Routes.game_show_path(@socket, :show, @game)}
-    />
-  </.modal>
-<% end %>
-
 <ul>
   <li>
     <strong>Name:</strong>
@@ -39,6 +26,6 @@
 </ul>
 
 <span>
-  <%= live_patch("Edit", to: Routes.game_show_path(@socket, :edit, @game), class: "button") %>
+  <%= live_redirect("Edit", to: Routes.game_edit_path(@socket, :edit, @game), class: "button") %>
 </span>
 | <span><%= live_redirect("Back", to: Routes.game_index_path(@socket, :index)) %></span>
